# snowy

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Common.hpp  Constants.hpp  IO.cpp  IO.hpp  LICENSE  Main.cpp  Makefile  Makefile.common  Makefile.debug  Makefile.release  Makefile.safe  Makefile.win64  MovePicker.cpp  MovePicker.hpp  PerftTest.cpp  PerftTest.hpp  README.md  Search.cpp  Search.hpp  StaticEvaluationParameters.hpp  TranspositionTable.cpp  TranspositionTable.hpp  UCI.cpp  UCI.hpp  Util.hpp  Zobrist.cpp  Zobrist.hpp
data/: regression.epd
test/: bench.sh  compare_perft.sh  epd_bm.sh
tuning/: static_eval.py
